--- a/grott.ini
+++ b/grott.ini
@@ -13,7 +13,7 @@ growattport = 5279
 #minrecl = 100
 
 # Specify mode (sniff or proxy)(> 2.1.0 proxy is default)
-#mode = proxy
+mode = proxy
 
 # Specify port and IP address to listen to (only proxy), default port 5279, 0.0.0.0 ==> own ip address
 #ip = 0.0.0.0
@@ -23,7 +23,7 @@ growattport = 5279
 # specify noipf = True if you still want be able to dest ip addres from growatt server
 # Specify noipf = True if you still want be able to dest ip addres from growatt server (advice only to use 
 # this for a short time)
-#blockcmd = True 
+blockcmd = False 
 #noipf = True
 
 # Time = auto/server parameter enable/disable date/time retrieval from data record (server), default is 
@@ -99,7 +99,7 @@ bucket = grottdb
 [extension] 
 # grott extension parameters definitions
 
-extension = False
+extension = True
 extname = grottext
 extvar = {"ip": "127.0.0.1", "port": "8000"}
 #10.0.0.103
