--- a/grott.ini
+++ b/grott.ini
@@ -85,8 +85,8 @@ nomqtt = True
 [influx]
 # Influxdb parameters definitions
 
-influx = True
-influx2 = True
+influx = False
+influx2 = False
 dbname = grottdb
 ip = https://us-east-1-1.aws.cloud2.influxdata.com
 port = 8086
